--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
   font-family: Georgia;
   outline: none;
 }
+.container{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
