--- a/style.css
+++ b/style.css
@@ -23,3 +23,40 @@
   grid-template-columns: repeat(6,68px);
 }
 
+input{
+  grid-column: span 6;
+  height: 70px;
+  width: 350px;
+  background-color: #ecf0f3;
+  box-shadow: inset -5px -5px 12px #f0ffff,
+                    5px 5px 12px rgba(0,0,0,.16);
+  border: none;
+  border-radius: 15px;
+  color: rgb(70, 70, 70);
+  font-size: 50px;
+  text-align: end;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  padding: 20px;
+}
+
+button{
+  height: 48px;
+  width: 48px;
+  background-color: #ecf0f3;
+  box-shadow: inset -5px -5px 12px #fffff0,
+                     5px 5px 12px rgba(0,0,0,.16);
+  border: none;
+  border-radius: 15px;
+  margin: 8px;
+  font-size: 16px;
+}
+
+.equal{
+  width: px;
+  border-radius: 15px;
+  box-shadow: inset -5px -5px 12px #ffffff,
+                     5px 5px 12px rgba(0,0,0,.16);
+
+}
